--- a/index.html
+++ b/index.html
@@ -544,8 +544,8 @@
         <div class="container">
             <div class="product-container">
                 <div class="product-image">
-                    <img src="https://drive.google.com/file/d/1EtcQUDTkNwLRkeJPB1yGEZoH_Pa_AiZI/view?usp=sharing" alt="Piles Free Ayurvedic Medicine" loading="lazy">
-                </div>
+     <img src="https://drive.google.com/uc?export=view&id=1EtcQUDTkNwLRkeJPB1yGEZoH_Pa_AiZI" alt="Piles Free Ayurvedic Medicine" loading="lazy">
+</div>
                 <div class="product-details">
                     <h2>Piles Free Ayurvedic Formula</h2>
                     <p>A powerful blend of Haritaki, Nagkesar, and 12 other rare herbs prepared according to ancient Ayurvedic principles.</p>
