--- a/index.html
+++ b/index.html
@@ -544,7 +544,7 @@
         <div class="container">
             <div class="product-container">
                 <div class="product-image">
-     <img src="https://drive.google.com/uc?export=view&id=1EtcQUDTkNwLRkeJPB1yGEZoH_Pa_AiZI" alt="Piles Free Ayurvedic Medicine" loading="lazy">
+     <img src="https://github.com/Geek0027/PilesFree/blob/main/PilesFree.jpg" alt="Piles Free Ayurvedic Medicine" loading="lazy">
 </div>
                 <div class="product-details">
                     <h2>Piles Free Ayurvedic Formula</h2>
