--- a/index.html
+++ b/index.html
@@ -534,8 +534,8 @@
                 </div>
             </div>
             <div class="review-link">
-                <a href="#review-form">Share your experience with us</a>
-            </div>
+    <a href="https://forms.gle/sNRnXJnhwA9cyHVM6" target="_blank">Share your experience with us</a>
+</div>
         </div>
     </section>
     
