--- a/index.html
+++ b/index.html
@@ -545,7 +545,7 @@ Bavaseer ki dva, Bavaseer ka ilaj, Bawaseer ki dawa, Bawaseer ka ilaj, Bawaseer 
         <div class="container">
             <div class="product-container">
                 <div class="product-image">
-     <img src="https://github.com/Geek0027/PilesFree/blob/main/PilesFree.jpg" alt="Piles Free Ayurvedic Medicine" loading="lazy">
+     <img src="PilesFree.jpg" alt="Complete Doze for 3 days">
 </div>
                 <div class="product-details">
                     <h2>Piles Free Ayurvedic Formula</h2>
