--- a/index.html
+++ b/index.html
@@ -558,7 +558,7 @@ Bavaseer ki dva, Bavaseer ka ilaj, Bawaseer ki dawa, Bawaseer ka ilaj, Bawaseer 
                     <div class="product-price">
                         ₹2,250 <span class="original-price">₹5,000</span> <span class="discount-badge">55% OFF</span>
                     </div>
-    <p class="urgency-note">Hurry! Only a few packs left — each batch is hand-prepared using rare traditional ingredients.</p>
+    <p class="urgency-note">For Pain-Free, Go PilesFree!</p>
     <a href="https://forms.gle/cToSNfqmXxuGWYb46" class="cta-button" target="_blank">Order Now</a>
 </div>
             </div>
