--- a/index.html
+++ b/index.html
@@ -632,11 +632,11 @@ Bavaseer ki dva, Bavaseer ka ilaj, Bawaseer ki dawa, Bawaseer ka ilaj, Bawaseer 
     <footer>
         <div class="container">
             <div class="footer-links">
-                <a href="#">Privacy Policy</a>
-                <a href="#">Terms of Service</a>
-                <a href="#">Contact Us</a>
-                <a href="#">About Ayurveda</a>
-            </div>
+    <a href="https://Geek007.github.io/privacy">Privacy Policy</a>
+    <a href="https://Geek007.github.io/Terms">Terms of Service</a>
+    <a href="https://Geek007.github.io/contact">Contact Us</a>
+    <a href="https://Geek007.github.io/About">About Ayurveda</a>
+</div>
             <p class="copyright">© 2023 Piles Free. All rights reserved.</p>
         </div>
     </footer>
