--- a/About.html
+++ b/About.html
@@ -210,10 +210,10 @@
     <footer>
         <div class="container">
             <div class="footer-links">
-                <a href="#">Privacy Policy</a>
-                <a href="#">Terms of Service</a>
-                <a href="#">Contact Us</a>
-            </div>
+    <a href="https://Geek007.github.io/privacy">Privacy Policy</a>
+    <a href="https://Geek007.github.io/Terms">Terms of Service</a>
+    <a href="https://Geek007.github.io/contact">Contact Us</a>
+</div>
             <p class="copyright">© 2023 PilesFree. All rights reserved.</p>
         </div>
     </footer>
