--- a/index.html
+++ b/index.html
@@ -634,7 +634,7 @@ Bavaseer ki dva, Bavaseer ka ilaj, Bawaseer ki dawa, Bawaseer ka ilaj, Bawaseer 
             <div class="footer-links">
     <a href="https://Geek007.github.io/privacy">Privacy Policy</a>
     <a href="https://Geek007.github.io/Terms">Terms of Service</a>
-    <a href="https://Geek007.github.io/contact">Contact Us</a>
+    <a href="https://Geek007.github.io/Contact">Contact Us</a>
     <a href="https://Geek007.github.io/About">About Ayurveda</a>
 </div>
             <p class="copyright">© 2023 Piles Free. All rights reserved.</p>
