--- a/Terms.html
+++ b/Terms.html
@@ -208,10 +208,10 @@
     <footer>
         <div class="container">
             <div class="footer-links">
-                <a href="#">Privacy Policy</a>
-                <a href="#">About Us</a>
-                <a href="#">Contact</a>
-            </div>
+    <a href="https://Geek007.github.io/privacy">Privacy Policy</a>
+    <a href="https://Geek007.github.io/Contact">Contact Us</a>
+    <a href="https://Geek007.github.io/About">About Ayurveda</a>
+</div>
             <p class="copyright">© 2023 PilesFree. All rights reserved.</p>
         </div>
     </footer>
