--- a/About.html
+++ b/About.html
@@ -212,7 +212,7 @@
             <div class="footer-links">
     <a href="https://Geek007.github.io/privacy">Privacy Policy</a>
     <a href="https://Geek007.github.io/Terms">Terms of Service</a>
-    <a href="https://Geek007.github.io/contact">Contact Us</a>
+    <a href="https://Geek007.github.io/Contact">Contact Us</a>
 </div>
             <p class="copyright">© 2023 PilesFree. All rights reserved.</p>
         </div>
