--- a/privacy.html
+++ b/privacy.html
@@ -226,11 +226,10 @@
     <footer>
         <div class="container">
             <div class="footer-links">
-                <a href="#">Home</a>
-                <a href="#">About Us</a>
-                <a href="#">Contact</a>
-                <a href="#">Terms of Service</a>
-            </div>
+    <a href="https://Geek007.github.io/Terms">Terms of Service</a>
+    <a href="https://Geek007.github.io/Contact">Contact Us</a>
+    <a href="https://Geek007.github.io/About">About Ayurveda</a>
+</div>
             <p class="copyright">© 2023 PilesFree Ayurvedic Treatment. All rights reserved.</p>
         </div>
     </footer>
