--- a/index.html
+++ b/index.html
@@ -630,13 +630,9 @@ Bavaseer ki dva, Bavaseer ka ilaj, Bawaseer ki dawa, Bawaseer ka ilaj, Bawaseer 
     
     <!-- Footer -->
     <footer>
-        <div class="container">
-            <div class="footer-links">
-    <a href="https://Geek007.github.io/privacy">Privacy Policy</a>
-    <a href="https://Geek007.github.io/Terms">Terms of Service</a>
-    <a href="https://Geek007.github.io/Contact">Contact Us</a>
-    <a href="https://Geek007.github.io/About">About Ayurveda</a>
-</div>
+        </div>
+            <p class="Contact Expert
+                G-Mail- expert.pilesfree@gmail.com</p>
             <p class="copyright">© 2023 Piles Free. All rights reserved.</p>
         </div>
     </footer>
