--- a/index.html
+++ b/index.html
@@ -631,7 +631,8 @@ Bavaseer ki dva, Bavaseer ka ilaj, Bawaseer ki dawa, Bawaseer ka ilaj, Bawaseer 
     <!-- Footer -->
     <footer>
         </div>
-            <p>Contact Expert G-Mail- expert.pilesfree@gmail.com</p>
+            <p>Expert
+                expert.pilesfree@gmail.com</p>
             <p class="copyright">© 2023 Piles Free. All rights reserved.</p>
         </div>
     </footer>
