--- a/index.html
+++ b/index.html
@@ -630,12 +630,11 @@ Bavaseer ki dva, Bavaseer ka ilaj, Bawaseer ki dawa, Bawaseer ka ilaj, Bawaseer 
     
     <!-- Footer -->
     <footer>
-        </div>
-            <p>Expert
-                expert.pilesfree@gmail.com</p>
-            <p class="copyright">© 2023 Piles Free. All rights reserved.</p>
-        </div>
-    </footer>
+    <div>
+        <p class="copyright">© 2023 Piles Free. All rights reserved.</p>
+        <p class="contact-email">Email: <a href="mailto:expert.pilesfree@gmail.com">expert.pilesfree@gmail.com</a></p>
+    </div>
+</footer>
     
     <script>
     // Enhanced Social Sharing Functions
