--- a/index.html
+++ b/index.html
@@ -630,9 +630,15 @@ Bavaseer ki dva, Bavaseer ka ilaj, Bawaseer ki dawa, Bawaseer ka ilaj, Bawaseer 
     
     <!-- Footer -->
     <footer>
-    <div>
+    <div class="footer-content">
         <p class="copyright">© 2023 Piles Free. All rights reserved.</p>
-        <p class="contact-email">Email: <a href="mailto:expert.pilesfree@gmail.com">expert.pilesfree@gmail.com</a></p>
+        <p class="contact-email">Contact us: 
+            <a href="https://mail.google.com/mail/?view=cm&fs=1&to=expert.pilesfree@gmail.com" 
+               target="_blank" 
+               rel="noopener noreferrer">
+               expert.pilesfree@gmail.com
+            </a>
+        </p>
     </div>
 </footer>
     
