--- a/index.html
+++ b/index.html
@@ -574,7 +574,7 @@ Bavaseer ki dva, Bavaseer ka ilaj, Bawaseer ki dawa, Bawaseer ka ilaj, Bawaseer 
                     <div class="step-number">1</div>
                     <div class="step-content">
                         <h3>Take 1 doze daily early morning empty stomach </h3>
-                        <p>Don’t eat anything 1 hour before and 1 hour after taking the medicine.</p>
+                        <p>Take medicine on an empty stomach and avoid eating anything for 2 hours afterward</p>
                     </div>
                 </div>
                 <div class="step">
